feat: add member memo feature
